<resources>
    <string name="app_name">alkewallet</string>
    <string name="textbienvenida1">El lugar mas seguro para tu dinero</string>
    <string name="textcrearcuentanueva2">Crear cuenta nueva</string>
    <string name="texttienecuenta3">Ya tienes cuenta?</string>
    <string name="textempiezatransferir4">Logea y empeza a transferir!</string>
    <string name="textmail5">Email</string>
    <string name="textingresatumail6">Ingresar tu email</string>
    <string name="textcontrasena7">Contraseña</string>
    <string name="textingresatucontrasena8">Ingresar tu contraseña</string>
    <string name="textolvidocontrasena9">Olvidaste tu contraseña?</string>
    <string name="textlogin10">Login</string>
    <string name="textcrearunanuevacuenta11">Crear una nueva cuenta</string>
    <string name="textregistrate12">Registrarse y empezar a transferir</string>
    <string name="textnombre13">Nombre</string>
    <string name="textingresarnombre14">Ingresar nombre</string>
    <string name="textapellido15">Apellido</string>
    <string name="textingresarapellido16">Ingresar apellido</string>
    <string name="textingresamail17">Ingresar Email</string>
    <string name="textingresacontrasena18">Ingresar contraseña</string>
    <string name="textreingresacontrasena19">Reingresar contraseña</string>
    <string name="textcrearcuenta20">Crear Cuenta </string>
    <string name="textyatienescuenta21">Ya tienes una cuenta??</string>
    <string name="textinicio22">Inicio</string>
    <string name="textbalancetotal23">Balance Total</string>
    <string name="textenviardinero24">Enviar Dinero</string>
    <string name="textingresardinero25">Ingresar dinero</string>
    <string name="textulttransacc26">Ultimas transacciones</string>
    <string name="textnohaytransacc27">No hay transacciones registradas!</string>
    <string name="textcantingresar28">Cantidad a ingresar</string>
    <string name="textnotastransfer29">Notas de transferencia</string>
    <string name="textagregarnotastransfer30">Agregar notas de transferencia(opcional)</string>
    <string name="textcanttransferir31">Cantidad a transferir</string>
    <string name="textmiperfil32">Mi perfil</string>
    <string name="textmiinformacion33">Mi Informacion</string>
    <string name="textmistc34">Mis tarjetas</string>
    <string name="textopciones35">Opciones</string>
    <string name="textcentroayuda36">Crentro de ayuda</string>
    <string name="textohola37">Hola, Amanda!</string>
    <string name="textoyara38">Yara Khalil</string>
    <string name="textofechayara39">Oct 14, 10:24 AM</string>
    <string name="textomontoyara40">-$15.00</string>
    <string name="textosara41">Sara Ibrahim</string>
    <string name="textofechasara42">Oct 12, 02:13 PM</string>
    <string name="textmontosara43">+$20.50</string>
    <string name="textoahmad44">Ahmad Ibrahim</string>
    <string name="textfechaahmad45">Oct 11, 01:19 AM</string>
    <string name="textomontoahmad46">+$12.40</string>
    <string name="textoreem47">Reem Khaled</string>
    <string name="textofechareem48">Oct 07, 09:10 PM</string>
    <string name="textomontoreem49">-$21.30</string>
    <string name="textohiba50">Hiba Saleh</string>
    <string name="textofechahiba51">Oct 04, 05:45 AM</string>
    <string name="textomontohiba52">+$09.00</string>
    <string name="textomailreem53">reem_1993@gmail.com</string>
    <string name="textomailyara54">yara_khalil@gmail.com</string>
    <string name="textoamanda55">Amanda Alkemy</string>
    <string name="textmontobalance">$124.57</string>

</resources>